// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option csharp_namespace = "GrpcClient";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package TP6;

// The greeting service definition.
service Greeter {
  rpc register (RegisterRequest) returns (RegisterReply);
  rpc sendTask (sendTaskRequest) returns (sendTaskReply);
}

// The request message containing the user's name.
message RegisterRequest {
  string worker_id = 1;
}

// The response message containing the greetings
message RegisterReply {
  int32 freq = 1;
  int32 iteration = 2;
}

message sendTaskRequest {} // we send empty taskrequest.

message sendTaskReply {
  string sensor_id = 1;
  string worker_id = 2;
}
